--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-JlibFprint/build
-JlibFprint/dist
-JlibFprint/nbproject/private
+/JlibFprint/target/
+/JlibFprint/nbproject/
 JlibFprint_jni/build
 JlibFprint_jni/dist
 JlibFprint_jni/nbproject/private
+
