Remove hardcoded JNI_LIB path to AX_JNI_INCLUDE_DIR

--- a/JlibFprint_jni/configure.ac
+++ b/JlibFprint_jni/configure.ac
@@ -29,6 +29,12 @@ AC_CHECK_HEADERS([iostream])
 AC_CHECK_HEADERS([jni])
 AC_CHECK_HEADERS([libfprint/fprint.h])
 
+AX_JNI_INCLUDE_DIR
+for JNI_INCLUDE_DIR in $JNI_INCLUDE_DIRS
+do
+      CPPFLAGS="$CPPFLAGS -I$JNI_INCLUDE_DIR"
+done
+
 
 LT_INIT
 
